[gd_scene load_steps=8 format=3 uid="uid://be1uemjtprbws"]

[ext_resource type="Script" uid="uid://dtglvjnd38w07" path="res://settings.gd" id="1_ry1ss"]
[ext_resource type="FontFile" uid="uid://hyqn0gbiv8lp" path="res://Fonts/PressStart2P-vaV7.ttf" id="2_gc0em"]
[ext_resource type="StyleBox" uid="uid://cim61kdj2tdfm" path="res://Buttons/pause_button_pressed_stylebox.tres" id="3_cj1lu"]
[ext_resource type="StyleBox" uid="uid://xqvu3l1ye3xe" path="res://Buttons/pause_button_stylebox.tres" id="4_71mqq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cj1lu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gc0em"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_71mqq"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_ry1ss")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 192.0
offset_top = 300.0
offset_right = 448.0
offset_bottom = 404.0
metadata/_edit_use_anchors_ = true

[node name="VisibleJoystick" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_cj1lu")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_gc0em")
theme_override_styles/pressed = SubResource("StyleBoxFlat_71mqq")
toggle_mode = true
text = "Invisible Joystick"

[node name="Back" type="Button" parent="."]
offset_left = 160.0
offset_top = 616.0
offset_right = 476.0
offset_bottom = 680.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_gc0em")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = ExtResource("3_cj1lu")
theme_override_styles/pressed = ExtResource("3_cj1lu")
theme_override_styles/normal = ExtResource("4_71mqq")
text = "Back
"

[connection signal="toggled" from="VBoxContainer/VisibleJoystick" to="." method="_on_visible_joystick_toggled"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
